--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 20000520
  - Xauth fix from Markus Friedl <markus.friedl@informatik.uni-erlangen.de>
+ - Don't touch utmp if USE_UTMPX defined
 
 20000518
  - Include Andre Lucas' fixprogs script. Forgot to "cvs add" it yesterday
