--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@
    <Lutz.Jaenicke@aet.TU-Cottbus.DE>
  - Use mkinstalldirs script to make directories instead of non-portable 
    "install -d". Suggested by Lutz Jaenicke <Lutz.Jaenicke@aet.TU-Cottbus.DE>
+ - Doc cleanup
 
 20000518
  - Include Andre Lucas' fixprogs script. Forgot to "cvs add" it yesterday
