- Fix EGD read bug by IWAMURO Motonori <iwa@mmp.fujitsu.co.jp>
update credits

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 20000531
  - Cleanup of auth.c, login.c and fake-*
  - Cleanup of auth-pam.c, save and print "account expired" error messages
+ - Fix EGD read bug by IWAMURO Motonori <iwa@mmp.fujitsu.co.jp>
 
 20000530
  - Define atexit for old Solaris
