--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20000606
+ - (djm) Added --with-cflags, --with-ldflags and --with-libs options to 
+   configure.
+
 20000604
  - Configure tweaking for new login code on Irix 5.3
  - (andre) login code changes based on djm feedback
