--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20000606
  - (djm) Fix rsh path in RPMs. Report from Jason L Tibbitts III 
    <tibbs@math.uh.edu>
+ - (djm) Warn user if grabs fail in GNOME askpass. Patch from Zack Weinberg
+   <zack@wolery.cumb.org>
  - (djm) OpenBSD CVS updates:
   - todd@cvs.openbsd.org
     [sshconnect2.c]
