- (djm) Remove duplicate headers from loginrec.c

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 20000606
+ - (djm) Remove duplicate headers from loginrec.c
  - (djm) Don't add /usr/local/lib to library search path on Irix
  - (djm) Fix rsh path in RPMs. Report from Jason L Tibbitts III 
    <tibbs@math.uh.edu>
