--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
  - (djm) Replace use of '-o' and '-a' logical operators in configure tests
    with '||' and '&&'. As suggested by Jim Knoble <jmknoble@pint-stowp.cx> 
    to fix SCO Unixware problem reported by Gary E. Miller <gem@rellim.com>
+ - (djm) Typo in loginrec.c
 
 20000618
  - (djm) Add summary of configure options to end of ./configure run
