--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+20000623
+ - (djm) Use sa_family_t in prototype for rresvport_af. Patch from 
+   Svante Signell <svante.signell@telia.com>
+ - (djm) Autoconf logic to define sa_family_t if it is missing
+
 20000622
  - (djm) Automatically generate host key during "make install". Suggested
    by Gary E. Miller <gem@rellim.com>
