--- a/README
+++ b/README
@@ -37,8 +37,14 @@ There is now several mailing lists for this port of OpenSSH. Please
 refer to http://www.openssh.com/list.html for details on how to join.
 
 Please send bug reports and patches to the mailing list
-openssh-unix-dev@mindrot.org. The list is currently open to posting by
+openssh-unix-dev@mindrot.org. The list is open to posting by
 unsubscribed users.
+
+If you are a citizen of the USA or another country which restricts 
+export of cryptographic products, then please refrain from sending 
+crypto-related code or patches to the list. We cannot accept them.
+Other code contribution are accepted, but please follow the OpenBSD
+style guidelines[5].
 
 Please refer to the INSTALL document for information on how to install
 OpenSSH on your system. The UPGRADING document details differences 
@@ -59,4 +65,5 @@ References -
 [2] ftp://ftp.freesoftware.com/pub/infozip/zlib/
 [3] http://www.openssl.org/
 [4] http://www.kernel.org/pub/linux/libs/pam/ (PAM is standard on Solaris)
+[5] http://www.openbsd.org/cgi-bin/man.cgi?query=style&sektion=9&apropos=0&manpath=OpenBSD+Current
 
