- (djm) Patch from Michael Stone <mstone@cs.loyola.edu> to add support for    Irix 6.x array sessions, project id's, and system audit trail id.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20000628
  - (djm) Fixes to lastlog code for Irix
  - (djm) Use atomicio in loginrec
+ - (djm) Patch from Michael Stone <mstone@cs.loyola.edu> to add support for
+   Irix 6.x array sessions, project id's, and system audit trail id.
 
 20000627
  - (djm) Fixes to login code - not setting li->uid, cleanups
