--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20000701
+ - (djm) Fix Tru64 SIA problems reported by John P Speno <speno@isc.upenn.edu>
+
 20000628
  - (djm) Fixes to lastlog code for Irix
  - (djm) Use atomicio in loginrec
