- (djm) Replace "/bin/sh" with _PATH_BSHELL  - (djm) Replace "/usr/bin/login" with LOGIN_PROGRAM

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20000701
  - (djm) Fix Tru64 SIA problems reported by John P Speno <speno@isc.upenn.edu>
  - (djm) Login fixes from Tom Bertelson <tbert@abac.com>
+ - (djm) Replace "/bin/sh" with _PATH_BSHELL
+ - (djm) Replace "/usr/bin/login" with LOGIN_PROGRAM
 
 20000628
  - (djm) Fixes to lastlog code for Irix
