--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
  - (djm) Replace "/usr/bin/login" with LOGIN_PROGRAM
  - (djm) Added check for broken snprintf() functions which do not correctly
    terminate output string and attempt to use replacement.
+ - (djm) Released 2.1.1p2
 
 20000628
  - (djm) Fixes to lastlog code for Irix
