--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20000702
+ - (djm) Fix brace mismatch from Corinna Vinschen <vinschen@cygnus.com>
+
 20000701
  - (djm) Fix Tru64 SIA problems reported by John P Speno <speno@isc.upenn.edu>
  - (djm) Login fixes from Tom Bertelson <tbert@abac.com>
