- (djm) Fix bad fprintf format handling in auth-pam.c. Patch from    Aaron Hopkins <aaron@die.net>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20000708
+ - (djm) Fix bad fprintf format handling in auth-pam.c. Patch from 
+   Aaron Hopkins <aaron@die.net>
+
 20000702
  - (djm) Fix brace mismatch from Corinna Vinschen <vinschen@cygnus.com>
  - (djm) Stop shadow expiry checking from preventing logins with NIS. Based
