- (djm) Don't use inet_addr.

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@
    Baars, Henk <Hendrik.Baars@nl.origin-it.com>
  - (djm) Handle EWOULDBLOCK returns from read() and write() in atomicio.c 
    Fix from Marquess, Steve Mr JMLFDC <Steve.Marquess@DET.AMEDD.ARMY.MIL>
+ - (djm) Don't use inet_addr. 
 
 20000702
  - (djm) Fix brace mismatch from Corinna Vinschen <vinschen@cygnus.com>
