--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
    Kevin Steves <stevesk@sweden.hp.com>
  - (djm) Match prototype and function declaration for rresvport_af.
    Problem report from Niklas Edmundsson <nikke@ing.umu.se>
+ - (djm) Missing $(DESTDIR) on host-key target causing problems with RPM 
+   builds. Problem report from Gregory Leblanc <GLeblanc@cu-portland.edu>
 
 20000708
  - (djm) Fix bad fprintf format handling in auth-pam.c. Patch from 
